likely final writeup; added new practice questions

--- a/Practical3/writeup/Practical3_writeup.tex
+++ b/Practical3/writeup/Practical3_writeup.tex
@@ -17,7 +17,7 @@
   David Wihl\\
   \texttt{davidwihl@gmail.com}
   \and
-  Zack Hendlin\\
+  Zachary Hendlin\\
   \texttt{zgh@mit.edu} 
 }
 %\date{}							% Activate to display a given date or no date
@@ -28,7 +28,7 @@
 
 We consider two approaches for classifying fruits (with length and width measurements provided) into one of three categories.
 
-It is important to note that the data here is not perfectly linearly seperable, as can be seen in the plot below:
+It is important to note that the data here is not perfectly linearly separable, as can be seen in the plot below:
 
 \includegraphics[scale=.6]{figure_3}
 
